feat: refactor project structure and add comprehensive factor analysis system
- Reorganize scrapers into src/scripts/scrape/ folder with dedicated README
- Refactor factor analysis (FA) modules into src/scripts/fa/ with 13 analysis factors
- Add new FA factors: wind, pitcher-hitter matchups, home/away performance, rest days,
  injury/recovery tracking, umpire strike zones, platoon advantages, park factors,
  temperature, pitch mix, lineup position, time of day, and defensive positions
- Consolidate FA documentation into docs/FACTOR_ANALYSIS_FA.md
- Update fb_ai.py to integrate all factor analyses for roster optimization
- Add __pycache__ folders to .gitignore
- Update README with latest project structure and feature documentation

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ oauth2.json.bak
 __pycache__/
 */__pycache__/
 **/__pycache__/
+
+# Python cache files
+**/__pycache__/
+**/*.pyc
+**/*.pyo
+**/*.pyd
