Reorganize project structure: move agents, docs, models, and auth files
- Created .github/agents/ and moved fb-ai agent file
- Updated .github/prompts/fb-ai with robot memory feature
- Moved all documentation to docs/robots/ (kept README.md and FB_AI_ARCHITECTURE.md)
- Created docs/robots/README.md to document memory system
- Added automatic memory file generation in docs/robots/ on each fb-ai run
- Moved catboost_info/ to src/catboost/
- Moved models/ to src/models/
- Consolidated catboost model files in src/catboost/
- Moved oauth2.json to data/auth/ (ignored by git)
- Moved log and pid files to logs/ folder
- Updated .gitignore to ignore logs/ and data/auth/
- Updated fb-ai symlink to point to .github/agents/fb-ai

This reorganization improves project structure, separates concerns, and adds
persistent memory for AI agent context across sessions.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 .env
 
 # Yahoo OAuth tokens
+data/auth/oauth2.json
+data/auth/oauth2.json.bak
 oauth2.json
 oauth2.json.bak
 
@@ -25,6 +27,9 @@ data/
 # Backup files
 *.bak
 *_OLD.md
+
+# Logs folder
+logs/
 
 # Log files
 *.log
